<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.UserInfoActivity">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        tools:text="YaEkaDev"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAvatar" />


    <ImageView
        android:id="@+id/ivFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@android:drawable/star_big_on"
        app:layout_constraintStart_toEndOf="@id/tvLogin"
        app:layout_constraintBottom_toBottomOf="@id/tvLogin"
        app:layout_constraintTop_toTopOf="@id/tvLogin" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tvNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvNameLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kate" />


            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameLabel" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvEmailLabel"
                app:layout_constraintTop_toBottomOf="@id/tvNameLabel"
                tools:text="ya@eklimenchenko.ru" />

            <TextView
                android:id="@+id/tvCompanyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/company"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvCompanyLabel"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"
                tools:text="IT Cron" />

            <TextView
                android:id="@+id/tvFollowingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/following"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCompanyLabel" />

            <TextView
                android:id="@+id/tvFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvFollowingLabel"
                app:layout_constraintTop_toBottomOf="@id/tvCompanyLabel"
                tools:text="10" />

            <TextView
                android:id="@+id/tvFollowersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/followers"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFollowingLabel" />

            <TextView
                android:id="@+id/tvFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvFollowersLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFollowingLabel"
                tools:text="100500" />

            <TextView
                android:id="@+id/tvCreatedAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/created_at"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFollowersLabel" />

            <TextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textColor="#000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tvCreatedAtLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFollowers"
                tools:text="10.10.2023" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>